examples/test/testpolicy4341.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4341
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key44: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value31
          key10: value9
          key34: value15
      podSelector:
        matchLabels:
          key31: value34
          key34: value23
          key22: value25
